--- a/lib/templates/layout.jade
+++ b/lib/templates/layout.jade
@@ -3,25 +3,171 @@ html(lang='en')
   head
     title flow.ci - eslint format renderer
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/4.0.0/normalize.min.css')
-    link(rel='stylesheet', href='https://fonts.useso.com/css?family=Open+Sans:400,300,600')
+    link(rel='stylesheet', href='http://fonts.useso.com/css?family=Open+Sans:400,300,600')
     style.
       body{
-        font-family: 'Open Sans';
+        background-color: #f0f0f5;
+        font-size: 14px;
+        color: #42424a;
+        font-family: Open Sans;
+      }
+      .text-error {
+        color: #f25367;
+      }
+      .text-normal{
+        color: #9b9b9b;
+      }
+      .text-yellow{
+        color: #d4af1f;
+      }
+      .text-grey{
+        color: #a2a4a7;
+      }
+      .text-black{
+        color: #20202a;
+      }
+      .severity{
+        color: #fff;
+        border-radius: 3px;
+        text-align: center;
+      }
+      .severity-refactor{
+        background-color: #3691F4;
+      }
+      .severity-convention{
+        background-color: #9013FE;
+      }
+      .severity-warning{
+        background-color: #F8CC1C;
+      }
+      .severity-error{
+        background-color: #F25367;
+      }
+      .severity-fatal{
+        background-color: #000000;
+      }
+    style.
+      a {
+        text-decoration: none;
+      }
+      .header{
+        background-color: #20202a;
+        color: #fff;
+        padding: 40px;
+        display: flex;
+      }
+      .project-wrap {
+        flex: 1 1 auto;
+      }
+      .project-wrap .name{
+        font-size: 22px;
+        line-height: 30px;
+        margin-bottom: 10px;
+      }
+      .project-result{
+        display: flex;
+      }
+      .project-result .col{
+        margin-right: 40px;
+        text-align: right;
+      }
+      .project-result .col .name {
+      }
+      .project-result .col .value {
+        font-size: 20px;
+        line-height: 30px;
+      }
+
+      .format-result{
+        padding: 40px;
+      }
+      .file-wrap{
+        border-radius: 5px;
+        border: 1px solid #cbcbcb;
+        box-shadow: 0px 0px 3px 3px #e6e6ea;
+        overflow: hidden;
+        margin-bottom: 40px;
+      }
+      .file-wrap .file-name{
+        padding: 20px;
+        background-color: #f6f6f6;
+        font-size: 16px;
+      }
+      .file-wrap .content .item{
+        padding: 20px 40px;
+        border-top: 1px solid #cbcbcb;
+        background-color: #fff;
+        display: flex;
+        align-items: flex-start;
+      }
+      .file-wrap .content .item .severity{
+        flex: 0 0 100px;
+        padding: 4px 8px;
+      }
+      .file-wrap .content .item .location{
+        flex: 0 0 auto;
+        margin: 0px 20px;
+        padding: 4px 0px;
+      }
+      .file-wrap .content .item .offense{
+        flex: 1 1 auto;
+      }
+      .offense .message {
+        margin-bottom: 10px;
+        line-height: 1.4;
+      }
+      .offense .cop_name {
+        font-size: 13px;
+      }
+      footer{
+        text-align: center;
+        margin-bottom:  40px;
+      }
+      footer .logo{
+        margin-bottom: 10px;
+      }
+      footer .support{
+        margin-bottom: 10px;
+      }
+      footer .support a {
+        color: #006dff;
+      }
+      footer .format-time{
       }
   body
-    h1 Format Renderer for Rubocop
-    
-    table(border='1')
-      tr
-        td Offense count
-        td= summary.offense_count
-      tr
-        td Target file count
-        td= summary.target_file_count
-      tr
-        td Inspected file count
-        td= summary.inspected_file_count
-
-    ul
+    div.header
+      div.project-wrap
+        div.name #{project.name}
+        div.project-job
+          a.text-yellow(href="http://dashboard.flow.ci/projects/#{project.id}/builds/#{event.id}" target="_blank") #&nbsp;#{event.number}
+      div.project-result
+        div.col.text-error
+          div.value #{summary.offense_count}
+          div.name Offenses
+        div.col.text-normal
+          div.value #{summary.target_file_count}
+          div.name All&nbsp;Files
+        div.col.text-yellow
+          div.value #{summary.inspected_file_count}
+          div.name Inspected
+    div.format-result
       each file in files
-        li= file.path
+        if file.offenses && file.offenses.length
+          div.file-wrap
+            div.file-name.text-black #{file.path}
+            div.content
+              each offense in file.offenses
+                div.item
+                  div.severity(class="severity-#{offense.severity}") #{offense.severity}
+                  div.location.text-grey L:#{offense.location.line},&nbsp;C:#{offense.location.column}
+                  div.offense
+                    div.message #{offense.message}
+                    div.text-grey.cop_name #{offense.cop_name}
+    footer
+      div.logo
+        a(href="http://flow.ci" target="_blank")
+          img(src="http://dashboard.flow.ci/images/logo-inline-blue.svg")
+      div.support.
+        This&nbsp;page&nbsp;generated&nbsp;by&nbsp;
+        <a href="https://github.com/FIRHQ/flow_format_render_rubocop" target="_target">flow_format_render_rubocop</a>
+      div.format-time #{nowTime}
