--- a/lib/templates/layout.jade
+++ b/lib/templates/layout.jade
@@ -166,7 +166,7 @@ html(lang='en')
     footer
       div.logo
         a(href="http://flow.ci" target="_blank")
-          img(src="http://dashboard.flow.ci/images/logo-inline-blue.svg")
+          img(src="http://flow.ci/images/logo-inline-blue.svg")
       div.support.
         This&nbsp;page&nbsp;generated&nbsp;by&nbsp;
         <a href="https://github.com/FIRHQ/flow_format_render_rubocop" target="_target">flow_format_render_rubocop</a>
